# AutoMartini

./: .gitignore  .gitmodules  THIRD_PARTY_LICENSES.md  environment.yaml  pyproject.toml  setup.py
auto_martiniM3/: optimization.py  solver.py  topology.py
tests/: test_basic.py  test_version.py
tests/files/: valid_ASP.top  valid_PRO.top
