[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "numpy>=1.23.1"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_martiniM3"
version = "0.1.0"
description = "A tool for automatic MARTINI 3 force field mapping and parametrization of small organic molecules"
authors = [
    {name = "Magdalena Szczuka"},
    {name = "Tristan Bereau"},
    {name = "Andrew Abi-Mansour"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "lxml>=4.9.1",
    "rdkit>=2022.03.4",
    "requests>=2.28.1",
    "numpy>=1.23.1",
    "six>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/Martini-Force-Field-Initiative/Automartini_M3"
Repository = "https://github.com/Martini-Force-Field-Initiative/Automartini_M3"
Documentation = "https://github.com/Martini-Force-Field-Initiative/Automartini_M3"

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=3.9.2",
    "flake8-bugbear>=22.1.11",
    "flake8-comprehensions>=3.8.0",
    "isort>=5.10.1",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.flake8]
max-line-length = 99
max-complexity = 10
ignore = ["W503", "W504"]
application-import-names = ["auto_martiniM3", "tests"]

[tool.coverage.run]
branch = true
source = ["auto_martiniM3"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
]
omit = ["tests/*"]
show_missing = true

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
